@@ -1,3 +1,7 @@
+- Refactor base64 conversion out of SMTP AUTH
+
+- Add support for SMTP AUTH CRAM-MD5
+
 - Document proto/smtp use $HELOHOST for the HELO string.
 
 - Convert all proto modules to use timedout reads.
