@@ -57,10 +57,11 @@ by an optional protocol string, separated by white space.
 The protocol name defaults to
 .IR smtp ,
 and may be followed by command-line arguments for that module.
-For example, to connect to port 2525 on your SMTP smart host, use:
+For example, to connect to port 2525 on your SMTP smart host,
+which also requires SMTP authentication, use:
 
 .EX
-    smarthost.dom smtp --port=2525
+    smarthost.dom smtp --port=2525 --auth=user,pass
 .EE
 
 Blank lines and lines starting with a pound are ignored.
