@@ -30,10 +30,12 @@
 const char* cli_help_suffix = "";
 const char* cli_args_usage = "remote-address < mail-file";
 const int cli_args_min = 1;
-const int cli_args_max = 1;
+const int cli_args_max = 2;
 cli_option cli_options[] = {
   { 'p', "port", cli_option::integer, 0, &port,
     "Set the port number on the remote host to connect to", 0 },
+  { 'a', "auth", cli_option::string, 0, &auth,
+    "Set the user and password for authentication (user,pass)", 0 },
   {0, 0, cli_option::flag, 0, 0, 0, 0}
 };
 
