@@ -31,6 +31,7 @@
 #include "protocol.h"
 
 int port = 628;
+char* auth = "";
 const char* cli_program = "qmqp";
 const char* cli_help_prefix = "Send an emal message via QMQP\n";
 
