@@ -2,6 +2,8 @@ This file lists all the major user-visible changes to nullmailer.
 -------------------------------------------------------------------------------
 Changes in version 1.01
 
+- Added support for SMTP AUTH PLAIN.  Thanks Ace Jones.
+
 - Fixed compile error in lib/list.h
 
 Development of this version has been sponsored by FutureQuest, Inc.
